# sqimple

./: .gitignore  LICENSE  custom.css  package-lock.json  package.json  pyproject.toml  readme.md  server.py  tailwind.config.js
sqimple/: __init__.py  cli.py  db.py  main.py  server.py  webapp.py
sqimple/static/: main.js  style.css
sqimple/templates/: index.html
